Finishing the new visualiztion, and improving its UI

--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -160,6 +160,7 @@
     <string name="coming_soon">Próximamente&#8230; ;)</string>
     <string name="blue_orange">Azul/Naranja</string>
     <string name="blue">Azul</string>
+    <string name="green">Verde</string>
     <string name="orange">Naranja</string>
     <string name="light">Claro</string>
     <string name="dark_light">Oscuro/Claro</string>
