--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -160,6 +160,7 @@
     <string name="coming_soon">Em breve&#8230; ;)</string>
     <string name="blue_orange">Azul/Laranja</string>
     <string name="blue">Azul</string>
+    <string name="green">Verde</string>
     <string name="orange">Laranja</string>
     <string name="light">Claro</string>
     <string name="dark_light">Escuro/Claro</string>
