--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -160,6 +160,7 @@
     <string name="coming_soon">Скоро&#8230; ;)</string>
     <string name="blue_orange">Сине-оранжевая</string>
     <string name="blue">Синяя</string>
+    <string name="green">Зеленый</string>
     <string name="orange">Оранжевая</string>
     <string name="light">Светлая</string>
     <string name="dark_light">Темный-Светлая</string>
