--- a/res/values-uk/strings.xml
+++ b/res/values-uk/strings.xml
@@ -160,6 +160,7 @@
     <string name="coming_soon">Скоро&#8230; ;)</string>
     <string name="blue_orange">Синя/Помаранчева</string>
     <string name="blue">Синя</string>
+    <string name="green">Зелений</string>
     <string name="orange">Помаранчева</string>
     <string name="light">Світла</string>
     <string name="dark_light">Темний/Світла</string>
