--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -160,6 +160,7 @@
     <string name="coming_soon">Coming soon&#8230; ;)</string>
     <string name="blue_orange">Blue/Orange</string>
     <string name="blue">Blue</string>
+    <string name="green">Green</string>
     <string name="orange">Orange</string>
     <string name="light">Light</string>
     <string name="dark_light">Dark/Light</string>
