Added new sorting options for the list and fixed the layout of the AboutActivity

--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -213,6 +213,9 @@
     <string name="opt_back_key_always_returns_to_player_when_browsing">Tecla Voltar física sempre retorna ao player quando estiver adicionando músicas</string>
     <string name="player">Player</string>
     <string name="go_back_to_player">Voltar ao player</string>
-    <string name="startup_message">A visualização foi melhorada! Experimente! ;)</string>
+    <string name="startup_message">Há novas opções para ordenar a lista! E também, a visualização foi melhorada! Experimente! ;)</string>
+    <string name="sort_by_title">Ordenar por título</string>
+    <string name="sort_by_artist">Ordenar por artista</string>
+    <string name="sort_by_album">Ordenar por álbum</string>
     
 </resources>
