--- a/res/values-uk/strings.xml
+++ b/res/values-uk/strings.xml
@@ -213,6 +213,9 @@
     <string name="opt_back_key_always_returns_to_player_when_browsing">Кнопка "Назад" завжди повертає до програвача під час додавання композицій</string>
     <string name="player">Програвач</string>
     <string name="go_back_to_player">Повернутися до програвача</string>
-    <string name="startup_message">The visualization has been improved! Give it a try! ;)</string>
+    <string name="startup_message">There are new sorting options for the list! Also, the visualization has been improved! Give it a try! ;)</string>
+    <string name="sort_by_title">Сортувати по назва</string>
+    <string name="sort_by_artist">Сортувати по виконавець</string>
+    <string name="sort_by_album">Сортувати по альбом</string>
     
 </resources>
