--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -213,6 +213,9 @@
     <string name="opt_back_key_always_returns_to_player_when_browsing">Physical Back key always returns to player while adding songs</string>
     <string name="player">Player</string>
     <string name="go_back_to_player">Return to the player</string>
-    <string name="startup_message">The visualization has been improved! Give it a try! ;)</string>
+    <string name="startup_message">There are new sorting options for the list! Also, the visualization has been improved! Give it a try! ;)</string>
+    <string name="sort_by_title">Sort by title</string>
+    <string name="sort_by_artist">Sort by artist</string>
+    <string name="sort_by_album">Sort by album</string>
     
 </resources>
