--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -45,6 +45,7 @@
     <string name="opt_language">Idioma:</string>
     <string name="opt_use_alternate_typeface">Usar fonte amigável para dislexia</string>
     <string name="opt_auto_turn_off">Desligar o player automaticamente em:</string>
+    <string name="opt_auto_idle_turn_off">Quando inativo, desligar o player automaticamente em:</string>
     <string name="opt_keep_screen_on">Manter a tela sempre ligada</string>
     <string name="opt_volume_control_type">Tipo do controle de volume:</string>
     <string name="opt_is_divider_visible">Mostrar divisão entre os itens das listas</string>
