--- a/res/values-uk/strings.xml
+++ b/res/values-uk/strings.xml
@@ -45,6 +45,7 @@
     <string name="opt_language">Мова:</string>
     <string name="opt_use_alternate_typeface">Використовувати діслексичний шрифт (опція не доступна для даної мови)</string>
     <string name="opt_auto_turn_off">Автоматично вимкнути плеєр після:</string>
+    <string name="opt_auto_idle_turn_off">У режимі очікування, автоматично вимкнути плеєр після:</string>
     <string name="opt_keep_screen_on">Тримати екран постійно включеним</string>
     <string name="opt_volume_control_type">Тип регулятора гучності:</string>
     <string name="opt_is_divider_visible">Показувати границю між елементами в списках</string>
