Fixed bugs in the idle shutdown timer and changed the default theme for devices with API 14+

--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -45,7 +45,7 @@
     <string name="opt_language">Idioma:</string>
     <string name="opt_use_alternate_typeface">Usar fuente amigable para dislexia</string>
     <string name="opt_auto_turn_off">Apagar automáticamente el reproductor después de:</string>
-    <string name="opt_auto_idle_turn_off">Cuando esté inactivo, apagar automáticamente el reproductor después de:</string>
+    <string name="opt_auto_idle_turn_off">Cuando esté inactivo, apagar automáticamente el reproductor después de (beta):</string>
     <string name="opt_keep_screen_on">Manter pantalla siempre encendida</string>
     <string name="opt_volume_control_type">Tipo de control de volumen:</string>
     <string name="opt_is_divider_visible">Mostrar división entre los ítems de la lista</string>
@@ -215,7 +215,7 @@
     <string name="opt_back_key_always_returns_to_player_when_browsing">Tecla de retroceso físico siempre regresa al reproductor mientras se van añadiendo las canciones</string>
     <string name="player">Reproductor</string>
     <string name="go_back_to_player">Volver al reproductor</string>
-    <string name="startup_message">- Nuevas opciones de clasificación de la lista\n- Nuevas opciones de visualización de las canciones\n- Visualización mejorada! Pruébala! ;)</string>
+    <string name="startup_message">- Nueva característica: cierre por inactividad\n- Nuevas opciones de clasificación de la lista\n- Nuevas opciones de visualización de las canciones\n- Visualización mejorada! Pruébala! ;)</string>
     <string name="sort_by_title">Ordenar por titulo</string>
     <string name="sort_by_artist">Ordenar por artista</string>
     <string name="sort_by_album">Ordenar por álbum</string>
