--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -45,7 +45,7 @@
     <string name="opt_language">Язык:</string>
     <string name="opt_use_alternate_typeface">Использовать дислексический шрифт (опция недоступна для данного языка)</string>
     <string name="opt_auto_turn_off">Выключить плеер автоматически после:</string>
-    <string name="opt_auto_idle_turn_off">В режиме ожидания, выключить плеер автоматически после:</string>
+    <string name="opt_auto_idle_turn_off">В режиме ожидания, выключить плеер автоматически после (beta):</string>
     <string name="opt_keep_screen_on">Держать экран постоянно включённым</string>
     <string name="opt_volume_control_type">Тип регулятора громкости:</string>
     <string name="opt_is_divider_visible">Показывать границу между элементами в списках</string>
@@ -215,7 +215,7 @@
     <string name="opt_back_key_always_returns_to_player_when_browsing">Кнопка \"Назад\" всегда возвращает к проигрывателю во время добавления композиций</string>
     <string name="player">Проигрыватель</string>
     <string name="go_back_to_player">Вернуться к проигрывателю</string>
-    <string name="startup_message">- New sorting options for the list\n- New display options for the songs\n- Improved visualization! Give it a try! ;)</string>
+    <string name="startup_message">- New feature: idle shutdown\n- New sorting options for the list\n- New display options for the songs\n- Improved visualization! Give it a try! ;)</string>
     <string name="sort_by_title">Сортировать по название</string>
     <string name="sort_by_artist">Сортировать по исполнитель</string>
     <string name="sort_by_album">Сортировать по альбом</string>
