--- a/res/values-uk/strings.xml
+++ b/res/values-uk/strings.xml
@@ -45,7 +45,7 @@
     <string name="opt_language">Мова:</string>
     <string name="opt_use_alternate_typeface">Використовувати діслексичний шрифт (опція не доступна для даної мови)</string>
     <string name="opt_auto_turn_off">Автоматично вимкнути плеєр після:</string>
-    <string name="opt_auto_idle_turn_off">У режимі очікування, автоматично вимкнути плеєр після:</string>
+    <string name="opt_auto_idle_turn_off">У режимі очікування, автоматично вимкнути плеєр після (beta):</string>
     <string name="opt_keep_screen_on">Тримати екран постійно включеним</string>
     <string name="opt_volume_control_type">Тип регулятора гучності:</string>
     <string name="opt_is_divider_visible">Показувати границю між елементами в списках</string>
@@ -215,7 +215,7 @@
     <string name="opt_back_key_always_returns_to_player_when_browsing">Кнопка "Назад" завжди повертає до програвача під час додавання композицій</string>
     <string name="player">Програвач</string>
     <string name="go_back_to_player">Повернутися до програвача</string>
-    <string name="startup_message">- New sorting options for the list\n- New display options for the songs\n- Improved visualization! Give it a try! ;)</string>
+    <string name="startup_message">- New feature: idle shutdown\n- New sorting options for the list\n- New display options for the songs\n- Improved visualization! Give it a try! ;)</string>
     <string name="sort_by_title">Сортувати по назва</string>
     <string name="sort_by_artist">Сортувати по виконавець</string>
     <string name="sort_by_album">Сортувати по альбом</string>
