--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -170,6 +170,7 @@
     <string name="there_is_a_new_setting">Существует новый параметр в меню \"Настройки\":</string>
     <string name="check_it_out">Перевірте це :)</string>
     <string name="color_theme">Цветовая схема</string>
+    <string name="flat_details">Подробности в твердых цветах</string>
     <string name="widget">Виджет</string>
     <string name="transparent_background">Прозрачный фон</string>
     <string name="text_color">Цвет текста</string>
@@ -215,7 +216,7 @@
     <string name="opt_back_key_always_returns_to_player_when_browsing">Кнопка \"Назад\" всегда возвращает к проигрывателю во время добавления композиций</string>
     <string name="player">Проигрыватель</string>
     <string name="go_back_to_player">Вернуться к проигрывателю</string>
-    <string name="startup_message">- New feature: idle shutdown\n- New sorting options for the list\n- New display options for the songs\n- Improved visualization! Give it a try! ;)</string>
+    <string name="startup_message">- New features: details in flat colors and idle shutdown\n- New sorting options for the list\n- New display options for the songs</string>
     <string name="sort_by_title">Сортировать по название</string>
     <string name="sort_by_artist">Сортировать по исполнитель</string>
     <string name="sort_by_album">Сортировать по альбом</string>
