--- a/res/values-uk/strings.xml
+++ b/res/values-uk/strings.xml
@@ -170,6 +170,7 @@
     <string name="there_is_a_new_setting">Існує новий параметр в меню \"Налаштування\":</string>
     <string name="check_it_out">Проверьте это :)</string>
     <string name="color_theme">Колірна схема</string>
+    <string name="flat_details">Подробиці у твердих кольорах</string>
     <string name="widget">Віджет</string>
     <string name="transparent_background">Прозорий фон</string>
     <string name="text_color">Колір тексту</string>
@@ -215,7 +216,7 @@
     <string name="opt_back_key_always_returns_to_player_when_browsing">Кнопка "Назад" завжди повертає до програвача під час додавання композицій</string>
     <string name="player">Програвач</string>
     <string name="go_back_to_player">Повернутися до програвача</string>
-    <string name="startup_message">- New feature: idle shutdown\n- New sorting options for the list\n- New display options for the songs\n- Improved visualization! Give it a try! ;)</string>
+    <string name="startup_message">- New features: details in flat colors and idle shutdown\n- New sorting options for the list\n- New display options for the songs</string>
     <string name="sort_by_title">Сортувати по назва</string>
     <string name="sort_by_artist">Сортувати по виконавець</string>
     <string name="sort_by_album">Сортувати по альбом</string>
