--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -170,6 +170,7 @@
     <string name="there_is_a_new_setting">There is a new setting available in the \"Settings\" menu:</string>
     <string name="check_it_out">Check it out :)</string>
     <string name="color_theme">Color theme</string>
+    <string name="flat_details">Details in flat colors</string>
     <string name="widget">Widget</string>
     <string name="transparent_background">Transparent background</string>
     <string name="text_color">Text color</string>
@@ -215,7 +216,7 @@
     <string name="opt_back_key_always_returns_to_player_when_browsing">Physical Back key always returns to player while adding songs</string>
     <string name="player">Player</string>
     <string name="go_back_to_player">Return to the player</string>
-    <string name="startup_message">- New feature: idle shutdown\n- New sorting options for the list\n- New display options for the songs\n- Improved visualization! Give it a try! ;)</string>
+    <string name="startup_message">- New features: details in flat colors and idle shutdown\n- New sorting options for the list\n- New display options for the songs</string>
     <string name="sort_by_title">Sort by title</string>
     <string name="sort_by_artist">Sort by artist</string>
     <string name="sort_by_album">Sort by album</string>
