--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -45,7 +45,7 @@
     <string name="opt_language">Idioma:</string>
     <string name="opt_use_alternate_typeface">Usar fonte amigável para dislexia</string>
     <string name="opt_auto_turn_off">Desligar o player automaticamente em:</string>
-    <string name="opt_auto_idle_turn_off">Quando inativo, desligar o player automaticamente em (beta):</string>
+    <string name="opt_auto_idle_turn_off">Quando inativo, desligar o player automaticamente em:</string>
     <string name="opt_keep_screen_on">Manter a tela sempre ligada</string>
     <string name="opt_volume_control_type">Tipo do controle de volume:</string>
     <string name="opt_is_divider_visible">Mostrar divisão entre os itens das listas</string>
@@ -56,8 +56,8 @@
     <string name="opt_double_click_mode">Usar dois cliques/toques para tocar as músicas da lista</string>
     <string name="opt_marquee_title">Girar o título da música atual quando não couber na tela</string>
     <string name="opt_prepare_next">Pré-carregar a próxima música para tentar diminuir o intervalos entre músicas consecutivas</string>
-    <string name="opt_clear_list_when_playing_folders">Limpar a lista existente antes de tocar uma pasta, uma nova lista ou um álbum</string>
-    <string name="opt_go_back_when_playing_folders">Voltar para a lista ao tocar uma pasta, uma nova lista ou um álbum</string>
+    <string name="opt_clear_list_when_playing_folders">Limpar a lista existente antes de tocar uma pasta, uma nova lista, um álbum ou um artista</string>
+    <string name="opt_go_back_when_playing_folders">Voltar para a lista ao tocar uma pasta, uma nova lista, um álbum ou um artista</string>
     <string name="opt_force_orientation">Forçar orientação da tela como:</string>
     <string name="opt_fade_in_focus">Duração do fade in do volume depois de uma chamada, ou de outra interrupção externa:</string>
     <string name="opt_fade_in_pause">Duração do fade in do volume ao retomar depois de um pause:</string>
