--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -45,7 +45,7 @@
     <string name="opt_language">Язык:</string>
     <string name="opt_use_alternate_typeface">Использовать дислексический шрифт (опция недоступна для данного языка)</string>
     <string name="opt_auto_turn_off">Выключить плеер автоматически после:</string>
-    <string name="opt_auto_idle_turn_off">В режиме ожидания, выключить плеер автоматически после (beta):</string>
+    <string name="opt_auto_idle_turn_off">В режиме ожидания, выключить плеер автоматически после:</string>
     <string name="opt_keep_screen_on">Держать экран постоянно включённым</string>
     <string name="opt_volume_control_type">Тип регулятора громкости:</string>
     <string name="opt_is_divider_visible">Показывать границу между элементами в списках</string>
@@ -56,8 +56,8 @@
     <string name="opt_double_click_mode">Использовать двойное нажатие для воспроизведения песен в плейлисте</string>
     <string name="opt_marquee_title">Прокручивать заголовок текущей песни, если он не помещается на экране</string>
     <string name="opt_prepare_next">Предварительно загружать следующую песню для сокращения разрыва между песнями</string>
-    <string name="opt_clear_list_when_playing_folders">Очистка существующего списка перед проигрыванием папки, нового списка или альбома</string>
-    <string name="opt_go_back_when_playing_folders">Вернуться к списку при воспроизведении папки, нового списка или альбома</string>
+    <string name="opt_clear_list_when_playing_folders">Очистка существующего списка перед проигрыванием папки, нового списка, альбома или исполнитель</string>
+    <string name="opt_go_back_when_playing_folders">Вернуться к списку при воспроизведении папки, нового списка, альбома или исполнитель</string>
     <string name="opt_force_orientation">Принудительная ориентация экрана:</string>
     <string name="opt_fade_in_focus">Уменьшение громкости при звонке или другом прерывании извне:</string>
     <string name="opt_fade_in_pause">Уменьшение громкости после снятия с паузы:</string>
