--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -45,7 +45,7 @@
     <string name="opt_language">Language:</string>
     <string name="opt_use_alternate_typeface">Use dyslexia-friendly typeface</string>
     <string name="opt_auto_turn_off">Automatically turn off the player after:</string>
-    <string name="opt_auto_idle_turn_off">When idle, automatically turn off the player after (beta):</string>
+    <string name="opt_auto_idle_turn_off">When idle, automatically turn off the player after:</string>
     <string name="opt_keep_screen_on">Keep screen always on</string>
     <string name="opt_volume_control_type">Volume control type:</string>
     <string name="opt_is_divider_visible">Show divider between items in lists</string>
@@ -56,8 +56,8 @@
     <string name="opt_double_click_mode">Use two clicks/touches to play songs in the playlist</string>
     <string name="opt_marquee_title">Spin current song\'s title when it does not fit on the screen</string>
     <string name="opt_prepare_next">Preload next song in order to try to reduce the gap between consecutive songs</string>
-    <string name="opt_clear_list_when_playing_folders">Clear existing list before playing a folder, a new list or an album</string>
-    <string name="opt_go_back_when_playing_folders">Return to the list when playing a folder, a new list or an album</string>
+    <string name="opt_clear_list_when_playing_folders">Clear existing list before playing a folder, a new list, an album or an artist</string>
+    <string name="opt_go_back_when_playing_folders">Return to the list when playing a folder, a new list, an album or an artist</string>
     <string name="opt_force_orientation">Force screen orientation as:</string>
     <string name="opt_fade_in_focus">Volume fade in\'s duration after a call, or another external interruption:</string>
     <string name="opt_fade_in_pause">Volume fade in\'s duration when unpausing:</string>
