Keyboard improvements, album art (initial version), improvements in SerializableMap (booleans are now stored as bits)

--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -139,6 +139,7 @@
     <string name="title">Titulo</string>
     <string name="artist">Artista</string>
     <string name="album">Álbum</string>
+    <string name="album_art">Carátula del álbum</string>
     <string name="track">Pista</string>
     <string name="duration">Duración</string>
     <string name="year">Year</string>
