Improved bitmap handling and recycling, improved general drawing methods and added the first fully working version of the album art

--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -217,7 +217,7 @@
     <string name="opt_back_key_always_returns_to_player_when_browsing">Tecla de retroceso físico siempre regresa al reproductor mientras se van añadiendo las canciones</string>
     <string name="player">Reproductor</string>
     <string name="go_back_to_player">Volver al reproductor</string>
-    <string name="startup_message">- Nuevas características: detalles en colores sólidos y cierre por inactividad\n- Nuevas opciones de clasificación de la lista\n- Nuevas opciones de visualización de las canciones</string>
+    <string name="startup_message">- Nuevas características: carátula del álbum, detalles en colores sólidos y cierre por inactividad\n- Nuevas opciones de clasificación de la lista\n- Nuevas opciones de visualización de las canciones</string>
     <string name="sort_by_title">Ordenar por titulo</string>
     <string name="sort_by_artist">Ordenar por artista</string>
     <string name="sort_by_album">Ordenar por álbum</string>
