--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -217,7 +217,7 @@
     <string name="opt_back_key_always_returns_to_player_when_browsing">Кнопка \"Назад\" всегда возвращает к проигрывателю во время добавления композиций</string>
     <string name="player">Проигрыватель</string>
     <string name="go_back_to_player">Вернуться к проигрывателю</string>
-    <string name="startup_message">- New features: details in flat colors and idle shutdown\n- New sorting options for the list\n- New display options for the songs</string>
+    <string name="startup_message">- New features: album art, details in flat colors and idle shutdown\n- New sorting options for the list\n- New display options for the songs</string>
     <string name="sort_by_title">Сортировать по название</string>
     <string name="sort_by_artist">Сортировать по исполнитель</string>
     <string name="sort_by_album">Сортировать по альбом</string>
