Added beta support for external USB, improved keyboard navigation and fixed an exception when pausing and resuming while fetching ListView items

--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -152,6 +152,7 @@
     <string name="all_files">Todos os arquivos</string>
     <string name="internal_storage">Armazenamento interno</string>
     <string name="external_storage">Armazenamento externo</string>
+    <string name="usb_storage">Armazenamento USB</string>
     <string name="error_playback">Desculpe, mas algo saiu errado durante a reprodução :(</string>
     <string name="error_msg">Desculpe, mas algo saiu errado durante a reprodução:</string>
     <string name="error_state">Desculpe, mas a reprodução teve que ser interrompida pois o player se comportou mal :(</string>
