--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -152,6 +152,7 @@
     <string name="all_files">Todos los archivos</string>
     <string name="internal_storage">Almacenamiento Interno</string>
     <string name="external_storage">Almacenamiento Externo</string>
+    <string name="usb_storage">Almacenamiento USB</string>
     <string name="error_playback">Lo sentimos, ha ocurrido un error durante la reproducción :(</string>
     <string name="error_msg">Lo sentimos, ha ocurrido un error durante la reproducción:</string>
     <string name="error_state">Lo sentimos, la reproducción tuvo que ser interrumpida por un mal comportamiento del reproductor :(</string>
