--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -152,6 +152,7 @@
     <string name="all_files">Все файлы</string>
     <string name="internal_storage">Внутренняя память</string>
     <string name="external_storage">Внешняя память</string>
+    <string name="usb_storage">USB память</string>
     <string name="error_playback">Извините, но что-то пошло не так во время воспроизведения :(</string>
     <string name="error_msg">Извините, но что-то пошло не так во время воспроизведения:</string>
     <string name="error_state">Извините, но воспроизведение было остановлено в связи с аварийным завершением работы плеера :(</string>
