--- a/res/values-uk/strings.xml
+++ b/res/values-uk/strings.xml
@@ -152,6 +152,7 @@
     <string name="all_files">Усі файли</string>
     <string name="internal_storage">Анутрішня пам\'ять</string>
     <string name="external_storage">Зовнішня пам\'ять</string>
+    <string name="usb_storage">USB пам\'ять</string>
     <string name="error_playback">Вибачте, але щось пішло не так під час відтворення :(</string>
     <string name="error_msg">Вибачте, але щось пішло не так під час відтворення:</string>
     <string name="error_state">Вибачте, але відтворення було зупинено у зв\'язку з аварійним завершенням роботи плеєра :(</string>
