--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -153,6 +153,8 @@
     <string name="internal_storage">Internal storage</string>
     <string name="external_storage">External storage</string>
     <string name="usb_storage">USB storage</string>
+    <string name="error_connection">No Internet connection :(</string>
+    <string name="error_gen">Sorry, but something went wrong :(</string>
     <string name="error_playback">Sorry, but something went wrong during the playback :(</string>
     <string name="error_msg">Sorry, but something went wrong during the playback:</string>
     <string name="error_state">Sorry, but the playback had to be stopped because the player has misbehaved :(</string>
